# ninres-rs

./: .gitignore  123.bundle.js  Cargo.toml  README.md  bundle.js  bundle.js.map  crate_publish.sh  crate_version_exists.sh  index.html  package.json
.github/workflows/: audit.yml  rust.yml  test-and-publish-cli.yml  test-and-publish-lib.yml
assets/: M1_Model.pack  M1_Player_MarioMdl.bfres  M3_Model.pack  MW_Model.pack
examples/: sarc.rs
ninres/: Cargo.toml  crate_publish.sh  crate_version_exists.sh
ninres-cli/: Cargo.toml  README.md
ninres-cli/src/: main.rs
ninres/examples/: sarc.rs
ninres/examples/web/: .eslintrc  .gitignore  bundle-report.html  package.json  webpack.dev.js  webpack.prod.js
ninres/examples/web/src/: app.tsx  header.tsx  index.html  index.tsx  ninres.tsx  smmdb.ts
ninres/src/: bfres.cs  bfres.rs  bntx.rs  bom.rs  error.rs  lib.rs  sarc.rs  util.rs
ninres/src/bntx/: util.rs
src/: bfres.rs  error.rs  lib.rs  sarc.rs  util.rs
src/sarc/: error.rs  mod.rs
