[package]
name = "sarc"
version = "0.0.1"
description = "Reads SARC files. A commonly used Nintendo file format."
authors = ["Mario Reder <mreder1289@gmail.com>"]
license = "MIT/Apache-2"
edition = "2018"

[dependencies]
cfg-if = { version = "0.1", optional = true }
num_enum = "0.4"
ruzstd = { version = "0.2", optional = true }
tar = { version = "0.4", optional = true }
thiserror = "1.0"

[dev-dependencies]
test-case = "1.0"

[features]
default = []
tar_sarc = ["tar"]
zstd = ["ruzstd", "cfg-if"]

[profile]
[profile.dev]
opt-level = 1

[profile.release]
debug = false
lto = true
codegen-units = 1
