[package]
name = "ninres"
version = "0.0.2"
description = "Read commonly used Nintendo file formats."
authors = ["Mario Reder <mreder1289@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
repository = "https://github.com/tarnadas/ninres-rs"
readme = "README.md"
keywords = ["gamedev", "parsing", "wasm"]
categories = ["game-development", "parser-implementations", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]
name = "ninres"
path = "src/lib.rs"

[dependencies]
byteorder = "1"
cfg-if = "1"
derivative = { version = "2", features = ["use_core"] }
image = { version = "0.23", default-features = false, optional = true }
once_cell = "1"
ruzstd = { version = "0.2", optional = true }
tar_crate = { package = "tar", version = "0.4", optional = true }
thiserror = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
js-sys = "0.3"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
web-sys = { version = "0.3", features = ["console"] }
wee_alloc = "0.4"

[dev-dependencies]
anyhow = "1"
test-case = "1"

[features]
default = []
bfres = []
sarc = []
tar = ["tar_crate"]
zstd = ["ruzstd"]
png = ["image", "image/png"]

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "sarc"
required-features = ["sarc", "zstd"]
